fixed the visual bug of overflow when adding products, size of links in nav-bar is now full, no buggy sapacing between

--- a/public/assets/styles/modules/Admin/_core.sass
+++ b/public/assets/styles/modules/Admin/_core.sass
@@ -4,3 +4,4 @@
 		padding: 0px 0px 0px 0px !important
 		margin: 0
 		height: 100% 
+		overflow: auto
