--- a/public/assets/styles/modules/Admin/_header.sass
+++ b/public/assets/styles/modules/Admin/_header.sass
@@ -1,6 +1,12 @@
 .navbar
 	border-radius: 0px !important
 
+.j-main-menu-link
+	padding: 0px
+
+.j-sub-menu-link
+	padding: 0px
+
 .navbaricons
 	font-size: 2.5em
 
