--- a/public/assets/styles/modules/Admin/_product.sass
+++ b/public/assets/styles/modules/Admin/_product.sass
@@ -4,6 +4,12 @@
 			max-height: 100%
 			max-width: 100%
 
+.product-section
+	height: 300px
+	background-color: #fff
+	padding: 5px
+	margin: 5px
+
 .main-image
 	overflow: hidden
 	height: 200px
