--- a/public/css/styles/app.css
+++ b/public/css/styles/app.css
@@ -2,6 +2,12 @@
   max-height: 100%;
   max-width: 100%; }
 
+.product-section {
+  height: 300px;
+  background-color: #fff;
+  padding: 5px;
+  margin: 5px; }
+
 .main-image {
   overflow: hidden;
   height: 200px; }
@@ -32,6 +38,12 @@ body {
 .navbar {
   border-radius: 0px !important; }
 
+.j-main-menu-link {
+  padding: 0px; }
+
+.j-sub-menu-link {
+  padding: 0px; }
+
 .navbaricons {
   font-size: 2.5em; }
   .navbaricons--green {
@@ -45,6 +57,7 @@ body {
   background-color: #f0f0f0;
   padding: 0px 0px 0px 0px !important;
   margin: 0;
-  height: 100%; }
+  height: 100%;
+  overflow: auto; }
 
 /*# sourceMappingURL=app.css.map */
